@@ -1,23 +1,23 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA256
 
-DIST openttd-1.3.2-source.tar.gz 9614867 SHA256 9c700406d375029f4f09236c414daabdaaba6e7992deb7300db7742b3ca641b9 SHA512 41b92b19b83fb0c8673fb78381db2eb8fa2284a4f152a35ef629c211b9cbe6e0bcf9600c5f2afd9083173c2a52d393aff34afe23da05c1596e22af9095676a54 WHIRLPOOL e125130953356b2fafe12485ea0c16c5493fd2f9cb37aef309d52184e1c70d4385f99ce9e25ae51a6a3a07c68318e202e809c01514dfe3273900f4224b1cb694
+DIST openttd-1.4.0-beta2-source.tar.gz 10008687 SHA256 6c7332d402ffb1b13271a3aca9bdb028db151bc4326224ea977833bb57981913 SHA512 8aaf6483e87b8e14a4bdb3067b104cdf3448eb5338f33cc122146393fdad7441572aea060843a51341408ac4ba0a7217735c08e47fbca1d0b732353f8867e6e9 WHIRLPOOL c8ca1cb3adaffd608c8f0a5ae18a50778d8a491a42f87fd30749484c5968fd7fcd9668fc8f2927fd04dc1c3433a2af852a7f93a69cba79e4b7babf6da8ca0097
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.20 (GNU/Linux)
+Version: GnuPG v2.0.22 (GNU/Linux)
 
-iQJ8BAEBCABmBQJR9Ve2XxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
+iQJ8BAEBCABmBQJS2+YJXxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
 ZW5wZ3AuZmlmdGhob3JzZW1hbi5uZXQ0NEM5MDM0MjM5MkNDRUI1NUFEQjYyMTIy
-RjA0RTMxRjA3MjAxRTdEAAoJEC8E4x8HIB59heMP/0030YkVz8AWOeo2gpDL+tDa
-eQTMwkm1y6GoFx7bZveZq7VQFjityvmI992PUJU9GPidsiz1cXqqOkEgA8GmRUsp
-o698Y6FkqNC66sZ559g+bUrxbc7tCqguCQUsCwoNRHFjBWIdnICn0PyjwwPQyhXK
-lB2QcegqUYF4woRVugJgiCdtOb9Jwa6/p1n+bpK/+7NCm9pmOisIKSCCT2Zlpm8p
-TjcRz0u2dlP5PlIm7wUcbPSGAN4ue3viWJU4ccEbwFIg8HZzb0Ui5sLozNSdhRq3
-j5Z71JfopbG+OT6UCkgl2kDZYawvrA0YL1uNMKfPdqLKQfu3s8rFe/obz4fVOOh3
-PgX6r4wZ8MeGjX0voK8WZu23bnfOJaSa/7Yg869tHjeWV4ayi97w08Z+nrJk7RlF
-1YWuA3yfH9F7+/BwgL9cPlA2dnHpgJrMWD3Vwaf3PucjbBDzOMlwkjZNrw+2pz9C
-zuDY7w+Yw7kK0wp5lCZmvIdjKsGyT7pZ7xD7z8OcNvOvJctQJA3GmB0xNZtixSLi
-fuo+2bjji6hsLkOwYq87hyg/+tHCMz06pmnRtuIVlKrnsrhf9PMAxUZ87KETdtow
-gTfKF+s2FQ8aKXto6NXJn7VtboqMORWmG3Tte+HpFM2NhqkAbhB3uThsMBWQhDJR
-rYFf95DgDkRog3mRmZ78
-=cMOa
+RjA0RTMxRjA3MjAxRTdEAAoJEC8E4x8HIB59GNEP/2XuGJ89ryvuKptqvJzBv7zR
+TEKkhOFtGtZLGNnbIILEnEXp/OcJqK8RVa7qLVWZ2atlQuxdwx6z/wi8E07jYicA
+HGKU4ER5tKxRVcDMH6ODECPTwzckI7EuskedpUOVOj7N9svQ6cPuYVY+82NNTfbc
+7Kyy9de05KMJlp0DHYAGe+FVXfSug5q9NmdAyqxzXweEHO/LEv9qYlXq9ZmgWvFL
+uUfZnz3GJ+ZWaf+JINRznXgxk2r5sjuPR6/ggU34x6ZkZyCJwvcv4ctmPSVeWhwd
+FLzqwvL4LXmu8XdheSUgUmDsRyhdSczx9NI4Gt28BSV+JWZ48xLGjq6pdi42QkKT
+XhAMc2mHG7V9Tw3TlfgXHT/YicAzy17icnK57C7/+lpcPYEfL8CUYPy/oqufLt0v
+ep1wDn/zBBcdLa/jN4rgy2ULwd7dvR1ahj/HHJ1LHHwTJ9KuA4rM5mAyPfBiKjQO
+YlK6eyJLB2/qZPVx+wAZTrTLE8axxr3eAF/o25Epy9n4B64jpbHjfMEZii32wMho
+toKPuCSYkjApdYTrMIX6kGeADpQLzs349b1tUAGchiJa4qKJ+BdmfVFmppxa3I3b
+cdpQX2u9/0ikJYtJM3xSLq57CezWC1Quvtf3u1OjFYrL8QRpB03OTb4usk3G03BC
+Z+xmaAWCykdp1qXXJeLB
+=5H5n
 -----END PGP SIGNATURE-----
